--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 </style>
 <body class="bg">
     <h1 class="title">아빠! 생신 축하드려요❤</h1>
-    <h1 class="title">저희를 키워주시고 재미있게 놀아주셔서 감사해요</h1>
-        <h1 class="title">사랑해요❤</h1>
+    <h1 class="title">저희를 키워주시고 </h1>
+    <h1 class="title">재미있게 놀아주셔서 </h1>
+    <h1 class="title">사랑해요❤</h1>
         <h1 class="title">선우,찬우올림</h1>
 </body>
 </html>
